--- a/TMD_AbuGhalib_treemap5/index.html
+++ b/TMD_AbuGhalib_treemap5/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>TMD Zoomable Treemap</title>
+<title>TMD-Abu Ghalib Zoomable Treemap</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
 <script type="module">
