--- a/TMD-AbuGhalib_nested_treemap6/index.html
+++ b/TMD-AbuGhalib_nested_treemap6/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>TMD Abu Ghalib Nested Treemap</title>
+<title>TMD-Abu Ghalib Nested Treemap</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
 <script type="module">
